--- a/scss/style.scss
+++ b/scss/style.scss
@@ -206,12 +206,15 @@ nav {
     color: map-get($colors, "pumpkin");
     margin-top: 0;
     margin-bottom: 2rem;
+    @include mobile-only(){
+        margin-bottom: 0;
+    }
   }
   picture {
     float: left;
     margin-right: 1rem;
     img{
-        border-radius: 10px;
+        border-radius: 5px;
     }
 
     @include mobile-only() {
