--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,7 @@ $breakpoints: (
 }
 
 body {
-  background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2131x1600/f37eddb510de1c5b80e95354ee8d63dd/photo-1581945495314-2acec0994197.jpg");
+  background-image: url("../img/bg-belle-ile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
