--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,22 @@ a:hover {
   color: #c0392b;
 }
 
+h2 {
+  font-size: 2rem;
+  color: #c0392b;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+@media (max-width: 599px) {
+  h2 {
+    margin-bottom: 0;
+  }
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -161,22 +177,11 @@ nav i:hover, nav i.active {
 .content {
   position: absolute;
   width: 90%;
-  min-height: 400px;
+  min-height: 500px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.9);
   padding: 5%;
   margin-bottom: 20px;
-}
-.content h2 {
-  font-size: 2rem;
-  color: #c0392b;
-  margin-top: 0;
-  margin-bottom: 2rem;
-}
-@media (max-width: 599px) {
-  .content h2 {
-    margin-bottom: 0;
-  }
 }
 .content picture {
   float: left;
