--- a/assets/fonts/fontawesome/css/fontawesome-ile.css
+++ b/assets/fonts/fontawesome/css/fontawesome-ile.css
@@ -109,3 +109,7 @@
   content: "\f21a"; }
   .fa-quote-left::before {
   content: "\f10d"; }
+  .fa-check::before {
+  content: "\f00c"; }
+  .fa-xmark::before {
+  content: "\f00d"; }
