--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,6 +124,11 @@ a {
   }
 }
 
+h1 {
+  margin: 0;
+  font-size: clamp(1.5rem, -1.7338rem + 8.6379vw, 3.125rem);
+}
+
 h2 {
   font-size: 2rem;
   color: map-get($colors, "pomegranate");
@@ -155,7 +160,6 @@ header {
 }
 
 .birthday {
-  font-size: clamp(1.5rem, 1.0652rem + 1.3913vw, 3.5rem);
   color: map-get($colors, "clouds");
   text-shadow: 1px 1px 1px map-get($colors, "greensea");
   padding: 0 2rem;
@@ -169,9 +173,6 @@ main {
   justify-content: flex-start;
   align-items: center;
   row-gap: 1rem;
-  //   overflow: auto;
-  //   overflow-y: hidden; /* Hide vertical scrollbar */
-  //   overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 #display-countdown {
@@ -189,10 +190,6 @@ main {
   color: map-get($colors, "white");
   border-radius: 10px;
   text-shadow: 1px 1px 1px map-get($colors, "belizehole");
-
-  @include orientation-landscape() {
-    // display: none;
-  }
 }
 
 nav {
@@ -296,7 +293,7 @@ nav {
 table {
   table-layout: fixed;
   width: 33%;
-  @include mobile-only(){
+  @include mobile-only() {
     width: 100%;
   }
   thead th {
