--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,19 @@ img {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
+
+ul li::before {
+  content: "•";
+  color: #c0392b;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
 .info-pic {
   height: 100%;
   max-width: 650px;
