--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,6 +96,19 @@ img {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
+
+ul li::before {
+  content: "\2022";
+  color: map-get($colors, "pomegranate");
+  font-weight: bold;
+  display: inline-block; 
+  width: 1em;
+  margin-left: -1em;
+}
+
 .info-pic {
   height: 100%;
   max-width: 650px;
