--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,12 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url("../fonts/roboto/Roboto-Regular.ttf") format("opentype");
+  font-display: swap;
+}
+
 $colors: (
   "belizehole": #2980b9,
   "greensea": #16a085,
@@ -104,7 +110,7 @@ ul li::before {
   content: "\2022";
   color: map-get($colors, "pomegranate");
   font-weight: bold;
-  display: inline-block; 
+  display: inline-block;
   width: 1em;
   margin-left: -1em;
 }
@@ -131,26 +137,26 @@ button,
 input[type="checkbox"] {
   accent-color: map-get($map: $colors, $key: "pomegranate");
   // accent-color: lime;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   border: 1px solid map-get($map: $colors, $key: "greensea");
   border-radius: 2px;
   border-radius: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background-color: #eee;
+  background-color: map-get($map: $colors, $key: "white");
   position: relative;
   &:checked::before {
     content: "\2713";
     font-size: 16px;
     position: absolute;
-    top: -2px;
+    top: -1px;
     left: 2px;
     color: map-get($map: $colors, $key: "turquoise");
   }
 }
 
-.day{
+.day {
   display: flex;
   column-gap: 2px;
   align-items: center;
@@ -163,7 +169,7 @@ form {
     display: flex;
     align-items: center;
     column-gap: 1rem;
-    @include mobile-only(){
+    @include mobile-only() {
       flex-direction: column;
       row-gap: 0.5rem;
     }
@@ -171,7 +177,7 @@ form {
   label {
     cursor: pointer;
   }
-  input {
+  input[type="text"]  {
     height: 25px;
     outline: none;
     &:focus {
@@ -180,6 +186,7 @@ form {
     }
   }
 }
+
 #submit {
   background-color: map-get($map: $colors, $key: "belizehole");
   color: map-get($map: $colors, $key: "white");
@@ -313,9 +320,6 @@ main {
   text-shadow: 1px 1px 1px map-get($colors, "belizehole");
 }
 
-nav {
-  margin-top: 2rem;
-}
 .container {
   position: relative;
   display: flex;
@@ -334,30 +338,55 @@ nav {
 }
 
 nav {
+  margin-top: 2rem;
   width: 80%;
   display: flex;
   justify-content: space-around;
-  .icon {
-    position: relative;
+
+  .nav-item {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    row-gap: 0.2rem;
     align-items: center;
-    background-color: map-get($colors, "white");
-    width: 70px;
-    height: 70px;
-    border-radius: 70%;
     cursor: pointer;
-    color: map-get($colors, "greensea");
-    font-size: clamp(1.5rem, 1.4059rem + 0.396vw, 2rem);
-    transition-duration: 300ms;
-    &:hover,
-    &.active {
+
+    .icon {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: map-get($colors, "white");
+      width: 70px;
+      height: 70px;
+      border-radius: 70%;
+      cursor: pointer;
+      color: map-get($colors, "greensea");
+      font-size: clamp(1.5rem, 1.4059rem + 0.396vw, 2rem);
+      &.active {
+        color: map-get($colors, "pomegranate");
+      }
+      @include mobile-only {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+      }
+    }
+
+    &:hover .icon {
       color: map-get($colors, "pomegranate");
     }
-    @include mobile-only {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
+
+    &:hover .nav-item_text {
+      color: map-get($colors, "pomegranate");
+    }
+
+    &_text {
+      font-family: "Roboto-Regular", sans-serif;
+      font-size: clamp(1rem, 0.6674rem + 0.8884vw, 2rem);
+      color: map-get($map: $colors, $key: "white");
+      &.active {
+        color: map-get($colors, "pomegranate");
+      }
     }
   }
 }
@@ -384,6 +413,24 @@ nav {
     @include tablet-portrait-down() {
       margin: 0;
       float: none;
+    }
+  }
+}
+
+.content-header {
+  display: flex;
+  justify-content: space-between;
+  .fa-xmark {
+    font-size: 2rem;
+    height: 26px;
+    color: map-get($map: $colors, $key: "turquoise");
+    cursor: pointer;
+    transition-duration: 300ms;
+    @include mobile-only(){
+      font-size: 1.5rem;
+    }
+    &:hover {
+      color: map-get($map: $colors, $key: "pomegranate");
     }
   }
 }
