--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 2rem;
 }
 
 .birth-title {
@@ -298,7 +299,6 @@ main {
 }
 
 nav {
-  margin-top: 2rem;
   width: 80%;
   display: flex;
   justify-content: space-around;
@@ -306,6 +306,7 @@ nav {
 @media (max-width: 599px) {
   nav {
     column-gap: 1rem;
+    width: 100%;
   }
 }
 nav .nav-item {
