--- a/scss/style.scss
+++ b/scss/style.scss
@@ -293,6 +293,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 2rem;
 }
 
 .birth-title {
@@ -355,12 +356,12 @@ main {
 }
 
 nav {
-  margin-top: 2rem;
   width: 80%;
   display: flex;
   justify-content: space-around;
   @include mobile-only() {
     column-gap: 1rem;
+    width: 100%;
   }
 
   .nav-item {
