--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,26 @@
 @charset "UTF-8";
-/* Playfair Display */
 @font-face {
   font-family: "PlayfairDisplay-Bold";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Bold.otf") format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Bold"), local("PlayfairDisplay-Bold"), url("../fonts/playfair-display/PlayfairDisplay-Bold.otf") format("opentype");
   font-display: swap;
 }
 @font-face {
   font-family: "PlayfairDisplay-Italic";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Italic.otf") format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Italic"), local("PlayfairDisplay-Italic"), url("../fonts/playfair-display/PlayfairDisplay-Italic.otf") format("opentype");
   font-display: swap;
 }
 @font-face {
   font-family: "PlayfairDisplay-Regular";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Regular.otf") format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Regular"), local("PlayfairDisplay-Regular"), url("../fonts/playfair-display/PlayfairDisplay-Regular.otf") format("opentype");
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto-Regular";
-  src: url("../fonts/roboto/Roboto-Regular.ttf") format("opentype");
+  font-style: normal;
+  src: local("Roboto Regular"), local("Roboto-Regular"), url("../fonts/roboto/Roboto-Regular.ttf") format("TrueType");
   font-display: swap;
 }
 body {
@@ -305,7 +308,6 @@ nav {
 }
 @media (max-width: 599px) {
   nav {
-    column-gap: 1rem;
     width: 100%;
   }
 }
