--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,26 +1,32 @@
-/* Playfair Display */
 @font-face {
   font-family: "PlayfairDisplay-Bold";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Bold.otf")
-    format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Bold"), local("PlayfairDisplay-Bold"),
+    url("../fonts/playfair-display/PlayfairDisplay-Bold.otf") format("opentype");
   font-display: swap;
 }
 @font-face {
   font-family: "PlayfairDisplay-Italic";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Italic.otf")
-    format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Italic"), local("PlayfairDisplay-Italic"),
+    url("../fonts/playfair-display/PlayfairDisplay-Italic.otf")
+      format("opentype");
   font-display: swap;
 }
 @font-face {
   font-family: "PlayfairDisplay-Regular";
-  src: url("../fonts/playfair-display/PlayfairDisplay-Regular.otf")
-    format("opentype");
+  font-style: normal;
+  src: local("PlayfairDisplay Regular"), local("PlayfairDisplay-Regular"),
+    url("../fonts/playfair-display/PlayfairDisplay-Regular.otf")
+      format("opentype");
   font-display: swap;
 }
 
 @font-face {
   font-family: "Roboto-Regular";
-  src: url("../fonts/roboto/Roboto-Regular.ttf") format("opentype");
+  font-style: normal;
+  src: local("Roboto Regular"), local("Roboto-Regular"),
+    url("../fonts/roboto/Roboto-Regular.ttf") format("TrueType");
   font-display: swap;
 }
 
@@ -34,6 +40,14 @@ $colors: (
   "black": #000000,
   "silver": #bdc3c7,
 );
+
+@mixin color($key) {
+  color: map-get($map: $colors, $key: $key);
+}
+
+@mixin bgColor($key) {
+  background-color: map-get($map: $colors, $key: $key);
+}
 
 $breakpoints: (
   mobile-only: 599px,
@@ -94,7 +108,7 @@ body {
   background-position: center;
   background-size: cover;
   font-family: "PlayfairDisplay-Regular", serif;
-  background-color: map-get($colors, "greensea");
+  @include bgColor("greensea");
 }
 
 img {
@@ -108,7 +122,7 @@ ul {
 
 ul li::before {
   content: "\2022";
-  color: map-get($colors, "pomegranate");
+  @include color("pomegranate");
   font-weight: bold;
   display: inline-block;
   width: 1em;
@@ -125,7 +139,7 @@ ol li:before {
   content: counter(item) ". ";
   font-weight: bold;
   counter-increment: item;
-  color: map-get($colors, "pomegranate");
+  @include color("pomegranate");
 }
 
 .info-pic {
@@ -157,7 +171,7 @@ input[type="checkbox"] {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background-color: map-get($map: $colors, $key: "white");
+  @include bgColor("white");
   position: relative;
   &:checked::before {
     content: "\2713";
@@ -165,7 +179,7 @@ input[type="checkbox"] {
     position: absolute;
     top: -1px;
     left: 2px;
-    color: map-get($map: $colors, $key: "turquoise");
+    @include color("turquoise");
   }
 }
 
@@ -195,14 +209,14 @@ form {
     outline: none;
     &:focus {
       border: 2px solid map-get($colors, "greensea");
-      color: map-get($colors, "black");
+      @include color("black");
     }
   }
 }
 
 #submit {
-  background-color: map-get($map: $colors, $key: "belizehole");
-  color: map-get($map: $colors, $key: "white");
+  @include bgColor("belizehole");
+  @include color("white");
   padding: 7px 30px;
   width: 160px;
   height: 32px;
@@ -211,13 +225,13 @@ form {
     width: 55%;
   }
   &:hover {
-    background-color: map-get($map: $colors, $key: "greensea");
+    @include bgColor("greensea");
   }
 }
 
 .response {
   margin: 5rem 0 1rem;
-  color: map-get($map: $colors, $key: "white");
+  @include color("white");
 }
 
 .header-response {
@@ -226,16 +240,15 @@ form {
   align-items: center;
   .btn-back {
     font-size: clamp(1.5rem, 1.1053rem + 1.2632vw, 3rem);
-    color: map-get($map: $colors, $key: "white");
-    // border-bottom: 2px solid map-get($map: $colors, $key: "greensea");
+    @include color("white");
     transition-duration: 300ms;
     &:hover {
-      color: map-get($map: $colors, $key: "pomegranate");
+      @include color("pomegranate");
     }
   }
   .fa-arrow-left {
     font-size: clamp(1.5rem, 1.1053rem + 1.2632vw, 3rem);
-    color: map-get($map: $colors, $key: "pomegranate");
+    @include color("pomegranate");
     margin-right: 1rem;
   }
 }
@@ -247,10 +260,10 @@ p {
 
 a {
   outline: 0;
-  color: map-get($colors, "greensea");
+  @include color("greensea");
   &:hover,
   &:focus-visible {
-    color: map-get($colors, "pomegranate");
+    @include color("pomegranate");
   }
   &:focus-visible {
     outline: 2px dotted map-get($map: $colors, $key: "black");
@@ -265,7 +278,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  color: map-get($colors, "pomegranate");
+  @include color("pomegranate");
   margin-top: 0;
   margin-bottom: 2rem;
   @include mobile-only() {
@@ -285,7 +298,7 @@ hr {
 }
 
 .red {
-  color: map-get($colors, "pomegranate");
+  @include color("pomegranate");
 }
 
 header {
@@ -306,7 +319,7 @@ header {
 }
 
 .birthday {
-  color: map-get($colors, "clouds");
+  @include color("clouds");
   text-shadow: 1px 1px 1px map-get($colors, "greensea");
   padding: 0 2rem;
   border-radius: 10px;
@@ -330,7 +343,7 @@ main {
   width: 50%;
   margin: 0 auto 1rem;
   padding: 2rem;
-  background-color: map-get($colors, "greensea");
+  @include bgColor("greensea");
   text-align: center;
   font-size: clamp(2rem, calc(1.3793rem + 2.7586vw), 5rem);
   color: map-get($colors, "white");
@@ -360,7 +373,6 @@ nav {
   display: flex;
   justify-content: space-around;
   @include mobile-only() {
-    column-gap: 1rem;
     width: 100%;
   }
 
@@ -376,15 +388,15 @@ nav {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: map-get($colors, "white");
+      @include bgColor("white");
       width: 70px;
       height: 70px;
       border-radius: 70%;
       cursor: pointer;
-      color: map-get($colors, "greensea");
+      @include color("greensea");
       font-size: clamp(1.5rem, 1.4059rem + 0.396vw, 2rem);
       &.active {
-        color: map-get($colors, "pomegranate");
+        @include color("pomegranate");
       }
       @include mobile-only {
         width: 50px;
@@ -394,11 +406,11 @@ nav {
     }
 
     &:hover .icon {
-      color: map-get($colors, "pomegranate");
+      @include color("pomegranate");
     }
 
     &:hover .nav-item_text {
-      color: map-get($colors, "pomegranate");
+      @include color("pomegranate");
     }
 
     &_text {
@@ -407,7 +419,7 @@ nav {
       color: map-get($map: $colors, $key: "white");
       transition-duration: 300ms;
       &.active {
-        color: map-get($colors, "pomegranate");
+        @include color("pomegranate");
       }
     }
   }
@@ -441,7 +453,7 @@ nav {
   .fa-xmark {
     font-size: 2rem;
     height: 30px;
-    color: map-get($map: $colors, $key: "turquoise");
+    @include color("turquoise");
     cursor: pointer;
     transition-duration: 300ms;
     transform-origin: center;
@@ -449,14 +461,14 @@ nav {
       font-size: 1.5rem;
     }
     &:hover {
-      color: map-get($map: $colors, $key: "pomegranate");
+      @include color("pomegranate");
       transform: rotate(225deg);
     }
   }
 }
 
 blockquote {
-  background-color: map-get($map: $colors, $key: "clouds");
+  @include bgColor("clouds");
   border-left: 10px solid map-get($map: $colors, $key: "silver");
   margin: 1em 10px;
   padding: 0 10px 0.5rem;
@@ -489,7 +501,7 @@ blockquote {
 
 .fa-quote-left {
   font-size: 2rem;
-  color: map-get($map: $colors, $key: "greensea");
+  @include color("greensea");
   margin-right: 10px;
 }
 
@@ -500,9 +512,9 @@ table {
     width: 100%;
   }
   thead th {
-    background-color: map-get($map: $colors, $key: "greensea");
+    @include bgColor("greensea");
     padding: 5px;
-    color: map-get($map: $colors, $key: "white");
+    @include color("white");
   }
   tr:nth-child(1) td {
     border-bottom: 1px solid map-get($map: $colors, $key: "turquoise");
