--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,18 +107,18 @@ input[type=checkbox]:checked::before {
 
 .day {
   display: flex;
-  column-gap: 2px;
   align-items: center;
+  column-gap: 2px;
 }
 
 form {
   margin: 2rem 0;
 }
 form fieldset {
-  border: none;
   display: flex;
   align-items: center;
   column-gap: 1rem;
+  border: none;
 }
 @media (max-width: 599px) {
   form fieldset {
@@ -229,11 +229,11 @@ hr {
 }
 
 header {
-  min-width: 270px;
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 2rem;
+  min-width: 270px;
 }
 
 .birth-title {
@@ -255,12 +255,12 @@ header {
 }
 
 main {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   row-gap: 1rem;
+  height: 100vh;
 }
 
 #display-countdown {
@@ -272,10 +272,10 @@ main {
   width: 50%;
   margin: 0 auto 1rem;
   padding: 2rem;
-  background-color: #16a085;
   text-align: center;
   font-size: clamp(2rem, 1.3793rem + 2.7586vw, 5rem);
   color: #ffffff;
+  background-color: #16a085;
   border-radius: 10px;
   text-shadow: 1px 1px 1px #2980b9;
 }
@@ -302,9 +302,9 @@ main {
 }
 
 nav {
-  width: 80%;
   display: flex;
   justify-content: space-around;
+  width: 80%;
 }
 @media (max-width: 599px) {
   nav {
@@ -314,8 +314,8 @@ nav {
 nav .nav-item {
   display: flex;
   flex-direction: column;
-  row-gap: 0.2rem;
   align-items: center;
+  row-gap: 0.2rem;
   cursor: pointer;
 }
 nav .nav-item .icon {
@@ -323,13 +323,14 @@ nav .nav-item .icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
   width: 70px;
   height: 70px;
   border-radius: 70%;
   cursor: pointer;
+  background-color: #ffffff;
   color: #16a085;
   font-size: clamp(1.5rem, 1.4059rem + 0.396vw, 2rem);
+  transition-duration: 300ms;
 }
 nav .nav-item .icon.active {
   color: #c0392b;
@@ -404,15 +405,15 @@ nav .nav-item_text.active {
 }
 
 blockquote {
+  display: flow-root;
+  font-size: clamp(1.1rem, 1.0718rem + 0.1188vw, 1.25rem);
   background-color: #ecf0f1;
+  min-width: 190px;
   border-left: 10px solid #bdc3c7;
   margin: 1em 10px;
   padding: 0 10px 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  font-size: clamp(1.1rem, 1.0718rem + 0.1188vw, 1.25rem);
-  min-width: 190px;
-  display: flow-root;
 }
 @media (max-width: 599px) {
   blockquote {
@@ -423,11 +424,11 @@ blockquote {
 
 .hide {
   visibility: hidden;
+  overflow: hidden;
   width: 1px;
   height: 1px;
   padding: 0;
   margin: -1px;
-  overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
@@ -453,8 +454,8 @@ table {
 }
 table thead th {
   background-color: #16a085;
-  padding: 5px;
   color: #ffffff;
+  padding: 5px;
 }
 table tr:nth-child(1) td {
   border-bottom: 1px solid #1abc9c;
