--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,8 @@ $colors: (
   background-color: map-get($map: $colors, $key: $key);
 }
 
+$duration: 300ms;
+
 $breakpoints: (
   mobile-only: 599px,
   tablet-portrait-up: 600px,
@@ -185,17 +187,17 @@ input[type="checkbox"] {
 
 .day {
   display: flex;
-  column-gap: 2px;
   align-items: center;
+  column-gap: 2px;
 }
 
 form {
   margin: 2rem 0;
   fieldset {
-    border: none;
     display: flex;
     align-items: center;
     column-gap: 1rem;
+    border: none;
     @include mobile-only() {
       flex-direction: column;
       row-gap: 0.5rem;
@@ -241,7 +243,7 @@ form {
   .btn-back {
     font-size: clamp(1.5rem, 1.1053rem + 1.2632vw, 3rem);
     @include color("white");
-    transition-duration: 300ms;
+    transition-duration: $duration;
     &:hover {
       @include color("pomegranate");
     }
@@ -302,11 +304,11 @@ hr {
 }
 
 header {
-  min-width: 270px;
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 2rem;
+  min-width: 270px;
 }
 
 .birth-title {
@@ -326,12 +328,12 @@ header {
 }
 
 main {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   row-gap: 1rem;
+  height: 100vh;
 }
 
 #display-countdown {
@@ -343,10 +345,10 @@ main {
   width: 50%;
   margin: 0 auto 1rem;
   padding: 2rem;
-  @include bgColor("greensea");
   text-align: center;
   font-size: clamp(2rem, calc(1.3793rem + 2.7586vw), 5rem);
   color: map-get($colors, "white");
+  @include bgColor("greensea");
   border-radius: 10px;
   text-shadow: 1px 1px 1px map-get($colors, "belizehole");
 }
@@ -369,9 +371,9 @@ main {
 }
 
 nav {
-  width: 80%;
   display: flex;
   justify-content: space-around;
+  width: 80%;
   @include mobile-only() {
     width: 100%;
   }
@@ -379,8 +381,8 @@ nav {
   .nav-item {
     display: flex;
     flex-direction: column;
-    row-gap: 0.2rem;
     align-items: center;
+    row-gap: 0.2rem;
     cursor: pointer;
 
     .icon {
@@ -388,13 +390,14 @@ nav {
       display: flex;
       justify-content: center;
       align-items: center;
-      @include bgColor("white");
       width: 70px;
       height: 70px;
       border-radius: 70%;
       cursor: pointer;
+      @include bgColor("white");
       @include color("greensea");
       font-size: clamp(1.5rem, 1.4059rem + 0.396vw, 2rem);
+      transition-duration: $duration;
       &.active {
         @include color("pomegranate");
       }
@@ -417,7 +420,7 @@ nav {
       font-family: "Roboto-Regular", sans-serif;
       font-size: clamp(1rem, 0.6674rem + 0.8884vw, 2rem);
       color: map-get($map: $colors, $key: "white");
-      transition-duration: 300ms;
+      transition-duration: $duration;
       &.active {
         @include color("pomegranate");
       }
@@ -455,7 +458,7 @@ nav {
     height: 30px;
     @include color("turquoise");
     cursor: pointer;
-    transition-duration: 300ms;
+    transition-duration: $duration;
     transform-origin: center;
     @include mobile-only() {
       font-size: 1.5rem;
@@ -468,15 +471,15 @@ nav {
 }
 
 blockquote {
+  display: flow-root;
+  font-size: clamp(1.1rem, 1.0718rem + 0.1188vw, 1.25rem);
   @include bgColor("clouds");
+  min-width: 190px;
   border-left: 10px solid map-get($map: $colors, $key: "silver");
   margin: 1em 10px;
   padding: 0 10px 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  font-size: clamp(1.1rem, 1.0718rem + 0.1188vw, 1.25rem);
-  min-width: 190px;
-  display: flow-root;
   // quotes: "\201C""\201D""\2018""\2019";
   @include mobile-only() {
     border-left: 6px solid map-get($map: $colors, $key: "silver");
@@ -486,11 +489,11 @@ blockquote {
 
 .hide {
   visibility: hidden;
+  overflow: hidden;
   width: 1px;
   height: 1px;
   padding: 0;
   margin: -1px;
-  overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
@@ -513,8 +516,8 @@ table {
   }
   thead th {
     @include bgColor("greensea");
-    padding: 5px;
     @include color("white");
+    padding: 5px;
   }
   tr:nth-child(1) td {
     border-bottom: 1px solid map-get($map: $colors, $key: "turquoise");
