--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,8 @@ ol li:before {
 .info-pic {
   height: 100%;
   max-width: 650px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 button,
@@ -106,23 +107,30 @@ input[type=checkbox]:checked::before {
 }
 
 .day {
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 2px;
+  -ms-flex-align: center;
+      align-items: center;
+  -moz-column-gap: 2px;
+       column-gap: 2px;
 }
 
 form {
   margin: 2rem 0;
 }
 form fieldset {
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 1rem;
+  -ms-flex-align: center;
+      align-items: center;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
   border: none;
 }
 @media (max-width: 599px) {
   form fieldset {
-    flex-direction: column;
+    -ms-flex-direction: column;
+        flex-direction: column;
     row-gap: 0.5rem;
   }
 }
@@ -161,9 +169,12 @@ form input[type=text]:focus {
 }
 
 .header-response {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
 }
 .header-response .btn-back {
   font-size: clamp(1.5rem, 1.1053rem + 1.2632vw, 3rem);
@@ -229,21 +240,28 @@ hr {
 }
 
 header {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
   row-gap: 2rem;
   min-width: 270px;
 }
 
 .birth-title {
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -ms-flex-pack: center;
+      justify-content: center;
 }
 @media (max-width: 599px) {
   .birth-title {
-    flex-direction: column;
-    align-items: center;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-align: center;
+        align-items: center;
   }
 }
 
@@ -255,10 +273,14 @@ header {
 }
 
 main {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
+  -ms-flex-align: center;
+      align-items: center;
   row-gap: 1rem;
   height: 100vh;
 }
@@ -282,9 +304,12 @@ main {
 
 .container {
   position: relative;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
   margin: 0 auto;
   padding: 0;
   width: 80%;
@@ -302,8 +327,10 @@ main {
 }
 
 nav {
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 80%;
 }
 @media (max-width: 599px) {
@@ -312,17 +339,23 @@ nav {
   }
 }
 nav .nav-item {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
   row-gap: 0.2rem;
   cursor: pointer;
 }
 nav .nav-item .icon {
   position: relative;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
   width: 70px;
   height: 70px;
   border-radius: 70%;
@@ -383,8 +416,10 @@ nav .nav-item_text.active {
 }
 
 .content-header {
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 .content-header .fa-xmark {
   font-size: 2rem;
