--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,8 +285,8 @@ main {
 }
 
 #display-countdown {
+  top: var(--offset-content);
   position: absolute;
-  top: 35%;
   left: 50%;
   transform: translateX(-50%);
   min-width: 165px;
@@ -396,9 +396,9 @@ nav .nav-item_text.active {
   min-width: 270px;
   min-height: 500px;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.9);
   padding: 5%;
   margin-bottom: 20px;
+  background-color: #ffffff;
 }
 .content figure {
   margin: 0 1rem 10px 0;
@@ -503,4 +503,16 @@ table td {
 
 table + p {
   font-size: 0.8rem;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fadein {
+  animation: fadeIn 300ms ease-out;
 }/*# sourceMappingURL=style.css.map */
