--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,11 @@ $colors: (
   background-color: map-get($map: $colors, $key: $key);
 }
 
+@mixin sizeCircle($width, $height: $width) {
+  width: $width;
+  height: $height;
+}
+
 $duration: 300ms;
 
 $breakpoints: (
@@ -335,8 +340,8 @@ main {
 }
 
 #display-countdown {
+  top: var(--offset-content);
   position: absolute;
-  top: 35%;
   left: 50%;
   transform: translateX(-50%);
   min-width: 165px;
@@ -432,9 +437,9 @@ nav {
   min-width: 270px;
   min-height: 500px;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.9);
   padding: 5%;
   margin-bottom: 20px;
+  @include bgColor("white");
   figure {
     margin: 0 1rem 10px 0;
     float: left;
@@ -529,4 +534,19 @@ table {
 }
 table + p {
   font-size: 0.8rem;
+}
+
+// Animation
+@keyframes fadeIn {
+  0% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadein {
+  animation: fadeIn $duration ease-out;
 }
