--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,7 +187,10 @@ input[type="checkbox"] {
     @include color("turquoise");
   }
 }
-
+.alldays {
+  display: flex;
+  column-gap: 0.3rem;
+}
 .day {
   display: flex;
   align-items: center;
@@ -198,11 +201,16 @@ form {
   margin: 2rem 0;
   fieldset {
     display: flex;
-    align-items: center;
+    justify-content: center;
     column-gap: 1rem;
+    @include tablet-portrait-only() {
+      column-gap: 0.3rem;
+    }
+    padding: 0;
     border: none;
     @include mobile-only() {
       flex-direction: column;
+      align-items: center;
       row-gap: 0.5rem;
     }
   }
