--- a/scss/style.scss
+++ b/scss/style.scss
@@ -195,6 +195,9 @@ input[type="checkbox"] {
   display: flex;
   align-items: center;
   column-gap: 2px;
+  @include mobile-only(){
+    font-size: 0.8rem;
+  }
 }
 
 form {
@@ -230,6 +233,7 @@ form {
 #submit {
   @include bgColor("belizehole");
   @include color("white");
+  font-size: 1rem;
   padding: 7px 30px;
   width: 160px;
   height: 32px;
