--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,25 @@ img {
   display: block;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+h1 {
+  font-size: clamp(1.5rem, -1.7338rem + 8.6379vw, 3.125rem);
+}
+
+h2 {
+  font-size: 2rem;
+  color: #c0392b;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 ul {
   list-style: none;
 }
@@ -44,7 +63,6 @@ ul {
 ul li::before {
   content: "•";
   color: #c0392b;
-  font-weight: bold;
   display: inline-block;
   width: 1em;
   margin-left: -1em;
@@ -100,9 +118,15 @@ input[type=checkbox]:checked::before {
   content: "✓";
   font-size: 16px;
   position: absolute;
-  top: -1px;
-  left: 2px;
+  top: 1px;
+  left: 3px;
   color: #1abc9c;
+}
+@-moz-document url-prefix() {
+  input[type=checkbox]:checked::before {
+    top: -1px;
+    left: 2px;
+  }
 }
 
 .alldays {
@@ -228,27 +252,6 @@ a:focus-visible {
   outline-offset: 3px;
 }
 
-h1 {
-  margin: 0;
-  font-size: clamp(1.5rem, -1.7338rem + 8.6379vw, 3.125rem);
-}
-
-h2 {
-  font-size: 2rem;
-  color: #c0392b;
-  margin-top: 0;
-  margin-bottom: 2rem;
-}
-@media (max-width: 599px) {
-  h2 {
-    margin-bottom: 0;
-  }
-}
-
-h3 {
-  font-size: 1.5rem;
-}
-
 hr {
   height: 1px;
   background-color: transparent;
@@ -294,15 +297,6 @@ header {
 }
 
 main {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  -ms-flex-pack: start;
-      justify-content: flex-start;
-  -ms-flex-align: center;
-      align-items: center;
-  row-gap: 1rem;
   height: 100vh;
 }
 
@@ -366,7 +360,6 @@ nav .nav-item {
       flex-direction: column;
   -ms-flex-align: center;
       align-items: center;
-  row-gap: 0.2rem;
   cursor: pointer;
 }
 nav .nav-item .icon {
@@ -379,7 +372,7 @@ nav .nav-item .icon {
       align-items: center;
   width: 70px;
   height: 70px;
-  border-radius: 70%;
+  border-radius: 50%;
   cursor: pointer;
   background-color: #ffffff;
   color: #16a085;
@@ -442,6 +435,9 @@ nav .nav-item_text.active {
   -ms-flex-pack: justify;
       justify-content: space-between;
 }
+.content-header:nth-child(1) {
+  margin-bottom: 1rem;
+}
 .content-header .fa-xmark {
   font-size: 2rem;
   height: 30px;
@@ -466,8 +462,8 @@ blockquote {
   background-color: #ecf0f1;
   min-width: 190px;
   border-left: 10px solid #bdc3c7;
-  margin: 1em 10px;
-  padding: 0 10px 0.5rem;
+  margin: 0 10px;
+  padding: 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
