--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,7 @@ $colors: (
 @mixin sizeCircle($width, $height: $width) {
   width: $width;
   height: $height;
+  border-radius: 50%;
 }
 
 $duration: 300ms;
@@ -122,6 +123,25 @@ img {
   display: block;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+h1 {
+  font-size: clamp(1.5rem, -1.7338rem + 8.6379vw, 3.125rem);
+}
+
+h2 {
+  font-size: 2rem;
+  @include color("pomegranate");
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 ul {
   list-style: none;
 }
@@ -129,7 +149,6 @@ ul {
 ul li::before {
   content: "\2022";
   @include color("pomegranate");
-  font-weight: bold;
   display: inline-block;
   width: 1em;
   margin-left: -1em;
@@ -182,20 +201,26 @@ input[type="checkbox"] {
     content: "\2713";
     font-size: 16px;
     position: absolute;
-    top: -1px;
-    left: 2px;
+    top: 1px;
+    left: 3px;
+    @-moz-document url-prefix() {
+      top: -1px;
+      left: 2px;
+    }
     @include color("turquoise");
   }
 }
+
 .alldays {
   display: flex;
   column-gap: 0.3rem;
 }
+
 .day {
   display: flex;
   align-items: center;
   column-gap: 2px;
-  @include mobile-only(){
+  @include mobile-only() {
     font-size: 0.8rem;
   }
 }
@@ -288,25 +313,6 @@ a {
   }
 }
 
-h1 {
-  margin: 0;
-  font-size: clamp(1.5rem, -1.7338rem + 8.6379vw, 3.125rem);
-}
-
-h2 {
-  font-size: 2rem;
-  @include color("pomegranate");
-  margin-top: 0;
-  margin-bottom: 2rem;
-  @include mobile-only() {
-    margin-bottom: 0;
-  }
-}
-
-h3 {
-  font-size: 1.5rem;
-}
-
 hr {
   height: 1px;
   background-color: transparent;
@@ -343,11 +349,6 @@ header {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  row-gap: 1rem;
   height: 100vh;
 }
 
@@ -397,7 +398,6 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 0.2rem;
     cursor: pointer;
 
     .icon {
@@ -405,9 +405,7 @@ nav {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 70px;
-      height: 70px;
-      border-radius: 70%;
+      @include sizeCircle(70px);
       cursor: pointer;
       @include bgColor("white");
       @include color("greensea");
@@ -417,9 +415,7 @@ nav {
         @include color("pomegranate");
       }
       @include mobile-only {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
+        @include sizeCircle(50px);
       }
     }
 
@@ -468,6 +464,9 @@ nav {
 .content-header {
   display: flex;
   justify-content: space-between;
+  &:nth-child(1) {
+    margin-bottom: 1rem;
+  }
   .fa-xmark {
     font-size: 2rem;
     height: 30px;
@@ -491,8 +490,8 @@ blockquote {
   @include bgColor("clouds");
   min-width: 190px;
   border-left: 10px solid map-get($map: $colors, $key: "silver");
-  margin: 1em 10px;
-  padding: 0 10px 0.5rem;
+  margin: 0 10px;
+  padding: 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   // quotes: "\201C""\201D""\2018""\2019";
