--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,13 @@ input[type=checkbox]:checked::before {
   -moz-column-gap: 0.3rem;
        column-gap: 0.3rem;
 }
+@media (max-width: 599px) {
+  .alldays {
+    width: 90%;
+    -ms-flex-pack: space-evenly;
+        justify-content: space-evenly;
+  }
+}
 
 .day {
   display: -ms-flexbox;
@@ -164,13 +171,17 @@ form fieldset {
       justify-content: center;
   -moz-column-gap: 1rem;
        column-gap: 1rem;
-  padding: 0;
-  border: none;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 3%;
+  border: 1px solid #c0392b;
+  border-radius: 5px;
 }
 @media (min-width: 600px) and (max-width: 899px) {
   form fieldset {
-    -moz-column-gap: 0.3rem;
-         column-gap: 0.3rem;
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 }
 @media (max-width: 599px) {
@@ -180,6 +191,8 @@ form fieldset {
     -ms-flex-align: center;
         align-items: center;
     row-gap: 0.5rem;
+    width: 90%;
+    padding: 5%;
   }
 }
 form label {
@@ -193,6 +206,11 @@ form input[type=text]:focus {
   border: 2px solid #16a085;
   color: #000000;
 }
+@media (max-width: 599px) {
+  form input[type=text] {
+    width: 70%;
+  }
+}
 
 #submit {
   background-color: #2980b9;
@@ -205,7 +223,7 @@ form input[type=text]:focus {
 }
 @media (max-width: 599px) {
   #submit {
-    width: 55%;
+    width: 70%;
   }
 }
 #submit:hover {
@@ -332,7 +350,7 @@ main {
       align-items: center;
   margin: 0 auto;
   padding: 0;
-  width: 80%;
+  width: 85%;
 }
 @media (max-width: 599px) {
   .container {
