--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,7 @@ blockquote {
   background-color: #ecf0f1;
   min-width: 190px;
   border-left: 10px solid #bdc3c7;
-  margin: 0 10px;
+  margin: 0;
   padding: 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
