--- a/scss/main.scss
+++ b/scss/main.scss
@@ -400,7 +400,7 @@ blockquote {
   @include mixins.bgColor("clouds");
   min-width: 190px;
   border-left: 10px solid map-get($map: variables.$colors, $key: "silver");
-  margin: 0 10px;
+  margin: 0;
   padding: 0.5rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
